--- a/header.html
+++ b/header.html
@@ -2,17 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=auto, initial-scale=2.0">
     <title>Header</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
     <div>
-        <p id="headertitles">Welcome to Krishnita Shop </p>
-        <p>
-         
-        </p>
+        <h1></h1>
+        <h1 id="headertitle"> Welcome to Krishnita </h1>
+      <div>  
+           <img src="hotel.jpg" alt="Hotel" height="100" width="120" id="img-hotel" >
+           <a href="hotel.html" target="_blank" id="AK">Book your Hotel</a></span>
+      </div>
+      <div>
+         <img src="grocery.jpg" alt="Grocery Shop" height="100" id="gap-">
+         <br>
+         <span>
+             <a href="hotel.html" target="_blank" id="AK">Book Grocery</a></span>
+     </div>
     </div>
 </header>
 </body>
