--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     <div class="footer">
         <h2>Contact Details</h2>
         <p>Email: <a href="mailto:info@krishnita.com">info@krishnita.com</a></p>
-        <p>Phone: +123-456-7890</p>
-        <p>2007 – 2024 Krishnita Enterprises. All rights reserved.</p>
+        <p>Phone: +91 6207648621</p>
+        <p>2026 – 20__ Krishnita Enterprises. All rights reserved.</p>
         <p>Services: Hotel Booking | Grocery Booking | Travel Services</p>
     </div>
 </body>
